# mypackage

./: LICENSE  README.md  notes_on_project_structure.txt  pyproject.toml
mypackage/: __init__.py  main.py
mypackage/core/: __init__.py  funx.py
mypackage/util/: __init__.py  someutils.py
scripts/: run.py
test/: run_tests.py
tests/: test.py  test_core.py
