[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mypackage"
version = "0.1.0"
description = "a simple package scaffold"
authors = [
    {name = "Elias Steiner", email = "elias.steiner@gmx.ch"}
]
license = "MIT
license-file = "LICENSE"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[project.urls]
Homepage = "https://github.com/eliassteiner1/mypackage"

[project.scripts]
mypackage-main-func = "mypackage.main:main_func"